@@ -1,7 +1,7 @@
 Checklist for official releases
 ===============================
 
-- test polyml-5.4.1, polyml-5.4.0, polyml-5.3.0, polyml-5.2.1, smlnj;
+- test polyml-5.4.1, polyml-5.4.0, polyml-5.3.0, smlnj;
 
 - test Proof General 4.1, 3.7.1.1;
 
