@@ -23,7 +23,6 @@ LOG = $(OUT)/log
 
 BOOTSTRAP_FILES = 					\
   General/exn.ML					\
-  ML-Systems/compiler_polyml-5.2.ML			\
   ML-Systems/compiler_polyml-5.3.ML			\
   ML-Systems/ml_name_space.ML				\
   ML-Systems/ml_pretty.ML				\
@@ -31,11 +30,9 @@ BOOTSTRAP_FILES = 					\
   ML-Systems/multithreading.ML				\
   ML-Systems/multithreading_polyml.ML			\
   ML-Systems/overloading_smlnj.ML			\
-  ML-Systems/polyml-5.2.1.ML				\
   ML-Systems/polyml.ML					\
   ML-Systems/polyml_common.ML				\
   ML-Systems/pp_dummy.ML				\
-  ML-Systems/pp_polyml.ML				\
   ML-Systems/proper_int.ML				\
   ML-Systems/single_assignment.ML			\
   ML-Systems/single_assignment_polyml.ML		\
@@ -145,7 +142,6 @@ $(OUT)/Pure: $(BOOTSTRAP_FILES)				\
   Isar/toplevel.ML					\
   Isar/typedecl.ML					\
   ML/install_pp_polyml-5.3.ML				\
-  ML/install_pp_polyml.ML				\
   ML/ml_antiquote.ML					\
   ML/ml_compiler.ML					\
   ML/ml_compiler_polyml-5.3.ML				\
